add details about tals

--- a/misc.html
+++ b/misc.html
@@ -11,7 +11,7 @@
 
     <title>Somesh Singh</title>
 
-    <!-- Reseting CSS       -->    
+    <!-- Reseting CSS       -->
     <link href="css/normalize.css" rel="stylesheet">
 
     <!-- Bootstrap Core CSS -->
@@ -28,9 +28,9 @@
     <![endif]-->
 
       <!-- Adding a favicon -->
-<!--	<link rel="shortcut icon" href="img/favicon_IIT-M.png" type="image/x-icon" /> 
+<!--	<link rel="shortcut icon" href="img/favicon_IIT-M.png" type="image/x-icon" />
 	<link rel="shortcut icon" href="img/favicon_s_blue.png" type="image/x-icon" /> -->
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" /> 
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 
 </head>
 
@@ -39,12 +39,12 @@
     <!-- Navigation -->
 
     <div class="container">
-	<h1 style="font-size:5rem; margin-bottom: 0.3em;">Somesh Singh</h1>				
+	<h1 style="font-size:5rem; margin-bottom: 0.3em;">Somesh Singh</h1>
 <!--
 	<h4 style="margin-top: 0.3rem; margin-left: 0.5rem; margin-bottom:1em;">PhD Candidate,
-	 <a href = "http://www.cse.iitm.ac.in/" target="_blank">CSE</a>, 
+	 <a href = "http://www.cse.iitm.ac.in/" target="_blank">CSE</a>,
 	 <a href = "https://www.iitm.ac.in/" target="_blank">IITM</a>
-	</h4> 
+	</h4>
 -->
     	   <nav class="navbar navbar-inverse navbar-static-top" >
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -54,7 +54,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                  </button> 
+                  </button>
                   <!--jQuery is required for the toggle button to work -->
                 <a class="navbar-brand initialism" href="index.html"> about me</a>
             </div>
@@ -83,7 +83,7 @@
         <div class="row">
 <!--
 	<div class="col-sm-3 col-lg-4">
-	<img src="img/me.jpg"  class="img-responsive" alt="Somesh's pic"> 
+	<img src="img/me.jpg"  class="img-responsive" alt="Somesh's pic">
         </div>
 -->
             <div class="col-lg-12">
@@ -111,7 +111,7 @@
 
 <li>
 <dl>
-  Awarded <em>ACM SIGPLAN PAC</em> grant for attending 
+  Awarded <em>ACM SIGPLAN PAC</em> grant for attending
   <a href= "https://ppopp19.sigplan.org/" target="_blank">PPoPP 2019</a>.
 </dl>
 </li>
@@ -151,107 +151,107 @@
 
 <li>
 <dl>
-    Reviewer: 
+    Reviewer:
 
-  <a href= "https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=71" target="_blank"> 
+  <a href= "https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=71" target="_blank">
 	  IEEE Transactions on Parallel and Distributed Systems</a> (since 2021),
 
-  <a href= "https://dl.acm.org/journal/taco" target="_blank"> 
+  <a href= "https://dl.acm.org/journal/taco" target="_blank">
 	  ACM Transactions on Architecture and Code Optimization</a> (since 2022),
 
-  <a href= "https://www.journals.elsevier.com/parallel-computing" target="_blank"> 
+  <a href= "https://www.journals.elsevier.com/parallel-computing" target="_blank">
 	  Parallel Computing</a> (since 2021)
   [<a href="docs/certificates/PARCO_Reviewer_Certificate_2021.pdf" target="_blank">certificate</a>],
 
-  <a href= "https://onlinelibrary.wiley.com/journal/15320634" target="_blank"> 
+  <a href= "https://onlinelibrary.wiley.com/journal/15320634" target="_blank">
 	  Concurrency and Computation: Practice and Experience</a> (since 2021)
   [<a href="docs/certificates/CPE_Reviewer_Certificate_2021.pdf" target="_blank">certificate</a>],
-          
-  
-  <a href= "https://www.sciencedirect.com/journal/computer-physics-communications" target="_blank"> 
+
+
+  <a href= "https://www.sciencedirect.com/journal/computer-physics-communications" target="_blank">
 	  Computer Physics Communications</a> (since 2023),
 
-  <a href= "https://www.springer.com/journal/41403" target="_blank"> 
+  <a href= "https://www.springer.com/journal/41403" target="_blank">
       Transactions of the Indian National Academy of Engineering</a> (since 2018),
 
-  <a href= "https://ieeexplore.ieee.org/xpl/aboutJournal.jsp?punumber=4563995" target="_blank"> 
+  <a href= "https://ieeexplore.ieee.org/xpl/aboutJournal.jsp?punumber=4563995" target="_blank">
 	 IEEE Embedded Systems Letters</a> (since 2017).
-	
+
 </dl>
 </li>
 
 <li>
 <dl>
-    Program Committee: 
+    Program Committee:
 
-  <a href= "https://hpc.pnl.gov/grapl/previous/2023/" target="_blank"> 
+  <a href= "https://hpc.pnl.gov/grapl/previous/2023/" target="_blank">
        GrAPL 2023</a> (IPDPSW).
-	
+
 </dl>
 </li>
 
 <li>
 <dl>
-    Extended Review Committee: 
+    Extended Review Committee:
 
-  <a href= "https://2023.ecoop.org/committee/ecoop-2023-research-papers-extended-review-committee" target="_blank"> 
+  <a href= "https://2023.ecoop.org/committee/ecoop-2023-research-papers-extended-review-committee" target="_blank">
        ECOOP 2023</a>,
 
-  <a href= "https://2022.ecoop.org/committee/ecoop-2022-papers-extended-review-committee-" target="_blank"> 
+  <a href= "https://2022.ecoop.org/committee/ecoop-2022-papers-extended-review-committee-" target="_blank">
        ECOOP 2022</a>.
-	
+
 
 </dl>
 </li>
 
 <li>
 <dl>
-    Subreviewer: 
+    Subreviewer:
 
-  <a href= "https://sc24.supercomputing.org/" target="_blank"> 
+  <a href= "https://sc24.supercomputing.org/" target="_blank">
        SC 2024</a>,
 
-  <a href= "https://2022.hipc.org/" target="_blank"> 
+  <a href= "https://2022.hipc.org/" target="_blank">
        HiPC 2022</a>.
-	
+
 </dl>
 </li>
 
 <li>
 <dl>
-    Artifact Evaluation Committee: 
+    Artifact Evaluation Committee:
 
-  <a href= "https://pldi24.sigplan.org/committee/pldi-2024-pldi-research-artifacts-artifact-evaluation-committee" target="_blank"> 
+  <a href= "https://pldi24.sigplan.org/committee/pldi-2024-pldi-research-artifacts-artifact-evaluation-committee" target="_blank">
         PLDI 2024</a>,
 
-  <a href= "https://etaps.org/2023/conferences/artifact-evaluation-esop-fossacs/" target="_blank"> 
+  <a href= "https://etaps.org/2023/conferences/artifact-evaluation-esop-fossacs/" target="_blank">
         ESOP and FoSSaCS 2023</a>,
 
-  <a href= "https://2023.ecoop.org/committee/ecoop-2023-artifact-evaluation-artifact-evaluation-committee" target="_blank"> 
+  <a href= "https://2023.ecoop.org/committee/ecoop-2023-artifact-evaluation-artifact-evaluation-committee" target="_blank">
         ECOOP 2023</a>,
 
-  <a href= "https://conf.researchr.org/committee/issta-2022/issta-2022-artifact-evaluation-artifact-evaluation-committee" target="_blank"> 
+  <a href= "https://conf.researchr.org/committee/issta-2022/issta-2022-artifact-evaluation-artifact-evaluation-committee" target="_blank">
         ISSTA 2022</a>,
 
-  <a href= "https://pldi22.sigplan.org/committee/pldi-2022-PLDI-Research-Artifacts-artifact-evaluation-committee" target="_blank"> 
+  <a href= "https://pldi22.sigplan.org/committee/pldi-2022-PLDI-Research-Artifacts-artifact-evaluation-committee" target="_blank">
         PLDI 2022</a>,
 
-     <a href= "https://etaps.org/user-profile/archive/53-etaps-2022/491-esop-2022-artifact-evaluation.html" target="_blank"> 
+     <a href= "https://etaps.org/user-profile/archive/53-etaps-2022/491-esop-2022-artifact-evaluation.html" target="_blank">
         ESOP 2022</a>,
 
-  <a href= "https://2022.ecoop.org/committee/ecoop-2022-artifacts-artifact-evaluation-committee" target="_blank"> 
+  <a href= "https://2022.ecoop.org/committee/ecoop-2022-artifacts-artifact-evaluation-committee" target="_blank">
         ECOOP 2022</a>,
-	
-  <a href= "https://2021.ecoop.org/committee/ecoop-2021-ecoop-artifacts-artifact-evaluation-committee" target="_blank"> 
+
+  <a href= "https://2021.ecoop.org/committee/ecoop-2021-ecoop-artifacts-artifact-evaluation-committee" target="_blank">
         ECOOP 2021</a>,
 
-  <a href= "https://ppopp21.sigplan.org/committee/PPoPP-2021-artifact-evaluation-committee" target="_blank"> 
+  <a href= "https://ppopp21.sigplan.org/committee/PPoPP-2021-artifact-evaluation-committee" target="_blank">
         PPoPP 2021</a>,
 
-  <a href= "https://2020.ecoop.org/committee/ecoop-2020-artifacts-artifact-evaluation-committee" target="_blank"> 
+  <a href= "https://2020.ecoop.org/committee/ecoop-2020-artifacts-artifact-evaluation-committee" target="_blank">
         ECOOP 2020</a>,
 
-  <a href= "https://ppopp18.sigplan.org/committee/ppopp-2018-artifact-evaluation-committee" target="_blank"> 
+  <a href= "https://ppopp18.sigplan.org/committee/ppopp-2018-artifact-evaluation-committee" target="_blank">
         PPoPP 2018</a>.
 </dl>
 </li>
@@ -259,12 +259,12 @@
 <li>
 <dl>
      Student Volunteer (SV) for
-  <a href= "https://2020.splashcon.org/" target="_blank"> 
+  <a href= "https://2020.splashcon.org/" target="_blank">
        SPLASH</a>
      /
-  <a href= "https://2020.ecoop.org/" target="_blank"> 
+  <a href= "https://2020.ecoop.org/" target="_blank">
        ECOOP 2020</a>.
-	
+
 </dl>
 </li>
 
@@ -288,7 +288,7 @@
 
 <li>
 <dl>
-  <a href= "https://topal.gitlabpages.inria.fr/topal-working-group/#org2a8a16d" target="_blank"> 
+  <a href= "https://topal.gitlabpages.inria.fr/topal-working-group/#org2a8a16d" target="_blank">
        Talk</a>
  at
 <a href="https://topal.gitlabpages.inria.fr/" target="_blank">TOPAL Inria Team</a>, Bordeaux, France.
@@ -301,7 +301,7 @@
 
 <li>
 <dl>
-  <a href= "https://topal.gitlabpages.inria.fr/topal-working-group/#org9cc64dc" target="_blank"> 
+  <a href= "https://topal.gitlabpages.inria.fr/topal-working-group/#org9cc64dc" target="_blank">
        Talk</a>
  at
 <a href="https://topal.gitlabpages.inria.fr/" target="_blank">TOPAL Inria Team</a>, Bordeaux, France.
@@ -314,10 +314,11 @@
 
 <li>
 <dl>
-  <a href= "https://app.swapcard.com/event/isc-high-performance-2023/planning/UGxhbm5pbmdfMTIyMDgxNg==" target="_blank"> 
+  <a href= "https://app.swapcard.com/event/isc-high-performance-2023/planning/UGxhbm5pbmdfMTIyMDgxNg==" target="_blank">
        Talk</a>
- at
-<a href="https://www.isc-hpc.com/" target="_blank"> 	
+ at the
+ <i>Focus Session on High Performance Tensor Computations</i>
+<a href="https://www.isc-hpc.com/" target="_blank">
 ISC 2023</a>, Hamburg, Germany.
 
   <span style="float:right;font-weight:normal; font-style:italic">
@@ -328,10 +329,10 @@ ISC 2023</a>, Hamburg, Germany.
 
 <li>
 <dl>
-  <a href= "https://meetings.siam.org/sess/dsp_talk.cfm?p=125348" target="_blank"> 
+  <a href= "https://meetings.siam.org/sess/dsp_talk.cfm?p=125348" target="_blank">
        Talk</a>
  at
-<a href="https://www.siam.org/conferences/cm/conference/cse23" target="_blank"> 	
+<a href="https://www.siam.org/conferences/cm/conference/cse23" target="_blank">
 SIAM CSE'23</a>, Amsterdam, The Netherlands.
 
   <span style="float:right;font-weight:normal; font-style:italic">
@@ -342,10 +343,10 @@ SIAM CSE'23</a>, Amsterdam, The Netherlands.
 
 <li>
 <dl>
-  <a href= "https://sparsedays.cerfacs.fr/en/slides-2022/" target="_blank"> 
+  <a href= "https://sparsedays.cerfacs.fr/en/slides-2022/" target="_blank">
        Talk</a>
  at
-<a href="https://sparsedays.cerfacs.fr/en/sparse-days-meeting-2022-in-saint-girons-iv/" target="_blank"> 	
+<a href="https://sparsedays.cerfacs.fr/en/sparse-days-meeting-2022-in-saint-girons-iv/" target="_blank">
 Sparse Days 2022</a>, Saint-Girons, France.
 
   <span style="float:right;font-weight:normal; font-style:italic">
@@ -356,10 +357,10 @@ Sparse Days 2022</a>, Saint-Girons, France.
 
 <li>
 <dl>
-  <a href= "https://scheduling2022.sciencesconf.org/program" target="_blank"> 
+  <a href= "https://scheduling2022.sciencesconf.org/program" target="_blank">
        Talk</a>
  at
-<a href="https://scheduling2022.sciencesconf.org/" target="_blank"> 	
+<a href="https://scheduling2022.sciencesconf.org/" target="_blank">
 15th Scheduling for Large Scale Systems Workshop</a>, Fr&#233;jus, France.
 
   <span style="float:right;font-weight:normal; font-style:italic">
@@ -370,12 +371,12 @@ Sparse Days 2022</a>, Saint-Girons, France.
 
 <li>
 <dl>
-  <a href= "http://www.ens-lyon.fr/LIP/ROMA/workinggroup.php" target="_blank"> 
+  <a href= "http://www.ens-lyon.fr/LIP/ROMA/workinggroup.php" target="_blank">
        Talk</a>
  at
 <a href="https://www.ens-lyon.fr/LIP/ROMA/" target="_blank">ROMA Inria Team</a>
  at
-<a href="http://www.ens-lyon.fr/LIP/" target="_blank">LIP</a>, Lyon, France.    
+<a href="http://www.ens-lyon.fr/LIP/" target="_blank">LIP</a>, Lyon, France.
 
   <span style="float:right;font-weight:normal; font-style:italic">
     March 2022
@@ -385,11 +386,11 @@ Sparse Days 2022</a>, Saint-Girons, France.
 
 <li>
 <dl>
-[Virtual] 
-  <a href= "https://meetings.siam.org/sess/dsp_talk.cfm?p=119071" target="_blank"> 
+[Virtual]
+  <a href= "https://meetings.siam.org/sess/dsp_talk.cfm?p=119071" target="_blank">
        Talk</a>
- at 
-  <a href= "https://www.siam.org/conferences/cm/conference/pp22" target="_blank"> 
+ at
+  <a href= "https://www.siam.org/conferences/cm/conference/pp22" target="_blank">
        SIAM PP'22</a>.
 
   <span style="float:right;font-weight:normal; font-style:italic">
@@ -400,11 +401,11 @@ Sparse Days 2022</a>, Saint-Girons, France.
 
 <li>
 <dl>
-[Virtual] 
-  <a href= "https://www.ics.forth.gr/lecture/15243" target="_blank"> 
+[Virtual]
+  <a href= "https://www.ics.forth.gr/lecture/15243" target="_blank">
        Talk</a>
- at 
-  <a href= "https://www.ics.forth.gr" target="_blank"> 
+ at
+  <a href= "https://www.ics.forth.gr" target="_blank">
        FORTH-ICS</a>.
 
   <span style="float:right;font-weight:normal; font-style:italic">
@@ -415,12 +416,12 @@ Sparse Days 2022</a>, Saint-Girons, France.
 
 <li>
 <dl>
-[Virtual] 
-  <a href= "https://blogs.qub.ac.uk/DIPSA/efficient-parallel-graph-processing-on-gpu-using-approximate-computing-by-somesh-singh/" target="_blank"> 
+[Virtual]
+  <a href= "https://blogs.qub.ac.uk/DIPSA/efficient-parallel-graph-processing-on-gpu-using-approximate-computing-by-somesh-singh/" target="_blank">
        Talk</a>
- at 
-  <a href= "https://www.qub.ac.uk/schools/eeecs/" target="_blank"> 
-  Queen’s University Belfast</a>. 
+ at
+  <a href= "https://www.qub.ac.uk/schools/eeecs/" target="_blank">
+  Queen’s University Belfast</a>.
 
   <span style="float:right;font-weight:normal; font-style:italic">
     May 2021
@@ -430,12 +431,12 @@ Sparse Days 2022</a>, Saint-Girons, France.
 
 <li>
 <dl>
-[Virtual] 
+[Virtual]
   <!--<a href= "https://stratcomm-elements.lbl.gov/berkeley-lab-events-calendar/" target="_blank">-->
   <a href= "https://crd.lbl.gov/resources/computing-sciences-seminars/" target="_blank">
        Talk</a>
- at 
-  <a href= "https://crd.lbl.gov/" target="_blank"> 
+ at
+  <a href= "https://crd.lbl.gov/" target="_blank">
 Lawrence Berkeley National Laboratory</a>.
   <span style="float:right;font-weight:normal; font-style:italic">
     March 2021
@@ -449,7 +450,7 @@ Lawrence Berkeley National Laboratory</a>.
 </div>
 
         </div>
-      
+
 
         </div>
         <!-- /.row -->
