add details about talks

--- a/misc.html
+++ b/misc.html
@@ -318,6 +318,7 @@
        Talk</a>
  at the
  <i>Focus Session on High Performance Tensor Computations</i>
+ at
 <a href="https://www.isc-hpc.com/" target="_blank">
 ISC 2023</a>, Hamburg, Germany.
 
@@ -331,6 +332,8 @@ ISC 2023</a>, Hamburg, Germany.
 <dl>
   <a href= "https://meetings.siam.org/sess/dsp_talk.cfm?p=125348" target="_blank">
        Talk</a>
+  at the
+  <i>minisymposium on Recent Advances in Combinatorial Scientific Computing </i>
  at
 <a href="https://www.siam.org/conferences/cm/conference/cse23" target="_blank">
 SIAM CSE'23</a>, Amsterdam, The Netherlands.
@@ -389,6 +392,8 @@ Sparse Days 2022</a>, Saint-Girons, France.
 [Virtual]
   <a href= "https://meetings.siam.org/sess/dsp_talk.cfm?p=119071" target="_blank">
        Talk</a>
+  at the
+  <i>minisymposium on Parallel Processing in Data Science Applications</i>
  at
   <a href= "https://www.siam.org/conferences/cm/conference/pp22" target="_blank">
        SIAM PP'22</a>.
