--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                 </ul>
  -->
         <p>
-	Hello!
-<!-- I am a Ph.D. student in the department of
+<!--	Hello!
+ I am a Ph.D. student in the department of
 <a href="http://www.cse.iitm.ac.in/" target="_blank">
 Computer Science and Engineering
 </a>
