--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ in the
 team
 at
 <a href="http://www.ens-lyon.fr/LIP/" target="_blank">LIP</a>,
-ENS de Lyon. I was hosted by
+ENS de Lyon, where I was hosted by
 <a href = "https://perso.ens-lyon.fr/bora.ucar/" target="_blank">Dr. Bora Uçar</a>.
 
 Before that, I obtained my Ph.D. from the
