minor in research

--- a/research.html
+++ b/research.html
@@ -105,7 +105,7 @@ My research centers around high-performance parallel computing with an emphasis 
 
 The focus of my Ph.D. research was on accelerating parallel graph processing using approximate computing. Details about my Ph.D. dissertation can be found <a href="phddissertation.html">here</a>.
 
-My current focus is on designing and developing methods and techniques for high-performance sparse tensor computations.
+During postdoc, my focus was on designing and developing methods and techniques for high-performance sparse tensor computations.
 
 <!--
 Currently, my focus is on optimizing and enhancing the performance of sparse matrix and tensor computations on parallel architectures.
