--- a/research.html
+++ b/research.html
@@ -462,9 +462,10 @@ Method and System for Performing Approximate Nearest Neighbour Search on Billion
 <li>
 <dl>
   Awarded
+  $1000 in
   <a href= "https://edu.google.com/programs/?modal_active=none" target="_blank">
-     <em>Google Cloud Platform </em></a>
-  research credits.
+     Google Cloud Platform</a>
+  credits for research on <em>parallel subgraph isomorphism</em>
   <span style="float:right;font-weight:normal; font-style:italic">
     2020
   </span>
