--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Indian Institute of Technology Madras</a> under the supervision of
 	<h3>Contact:</h3>
 
 	<p>
-	  Somesh Singh <br/>
+		<b>Somesh Singh</b><br/>
 	<!--<a href = "http://pace.cse.iitm.ac.in/" target="_blank"> PACE Lab</a>,
 	  BSB 331-A <br/>
 	  Dept. of CSE<br/>
