--- a/index.html
+++ b/index.html
@@ -154,9 +154,10 @@ Indian Institute of Technology Madras</a> under the supervision of
       46, allée d'Italie <br/>
       69007 Lyon, France. <br/>
       <br/> -->
-    Email:
+    Email: {firstname} (dot) {lastname}1992 (at) gmail (dot) com
 
 
+    <!--
 <ul>
 
 <li>
@@ -168,6 +169,7 @@ Indian Institute of Technology Madras</a> under the supervision of
 </li>
 
 </ul>
+-->
 
 	</p>
 <!--    <p>
