--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ Indian Institute of Technology Madras</a> under the supervision of
       46, allée d'Italie <br/>
       69007 Lyon, France. <br/>
       <br/> -->
-    Email: {firstname} (dot) {lastname}1992 (at) gmail (dot) com
+      <em>Email</em>: {firstname} (dot) {lastname}1992 (at) gmail (dot) com
 
 
     <!--
