--- a/misc.html
+++ b/misc.html
@@ -288,7 +288,7 @@
 
 <li>
 <dl>
-  <a href= "https://topal.gitlabpages.inria.fr/topal-working-group/#org2842430" target="_blank">
+  <a href= "https://topal.gitlabpages.inria.fr/topal-working-group/" target="_blank">
        Talk</a>
  at
 <a href="https://topal.gitlabpages.inria.fr/" target="_blank">TOPAL Inria Team</a>, Bordeaux, France.
@@ -301,7 +301,7 @@
 
 <li>
 <dl>
-  <a href= "https://topal.gitlabpages.inria.fr/topal-working-group/#org094eb02" target="_blank">
+  <a href= "https://topal.gitlabpages.inria.fr/topal-working-group/" target="_blank">
        Talk</a>
  at
 <a href="https://topal.gitlabpages.inria.fr/" target="_blank">TOPAL Inria Team</a>, Bordeaux, France.
