--- a/misc.html
+++ b/misc.html
@@ -289,25 +289,12 @@
 <li>
 <dl>
   <a href= "https://topal.gitlabpages.inria.fr/topal-working-group/" target="_blank">
-       Talk</a>
+       Talks</a>
  at
 <a href="https://topal.gitlabpages.inria.fr/" target="_blank">TOPAL Inria Team</a>, Bordeaux, France.
 
   <span style="float:right;font-weight:normal; font-style:italic">
-    March 2024
-  </span>
-</dl>
-</li>
-
-<li>
-<dl>
-  <a href= "https://topal.gitlabpages.inria.fr/topal-working-group/" target="_blank">
-       Talk</a>
- at
-<a href="https://topal.gitlabpages.inria.fr/" target="_blank">TOPAL Inria Team</a>, Bordeaux, France.
-
-  <span style="float:right;font-weight:normal; font-style:italic">
-    December 2023
+    March 2024 &amp; December 2023 
   </span>
 </dl>
 </li>
