--- a/misc.html
+++ b/misc.html
@@ -283,7 +283,7 @@
 
 <h3> Selected Invited Talks </h3>
 
-<div style="font-size:18px; display: flex;">
+<div style="font-size:18px;">
 <ul>
 
 <li>
