--- a/misc.html
+++ b/misc.html
@@ -221,6 +221,9 @@
 <dl>
     Artifact Evaluation Committee:
 
+  <a href= "https://2025.splashcon.org/committee/splash-2025-oopsla-artifacts-artifact-evaluation-committee" target="_blank">
+        OOPSLA 2025</a>,
+
   <a href= "https://pldi24.sigplan.org/committee/pldi-2024-pldi-research-artifacts-artifact-evaluation-committee" target="_blank">
         PLDI 2024</a>,
 
