--- a/index.html
+++ b/index.html
@@ -580,6 +580,465 @@ Method and System for Performing Approximate Nearest Neighbour Search on Billion
         <!-- /.row -->
 <hr />
 
+        <div class="row">
+<!--
+	<div class="col-sm-3 col-lg-4">
+	<img src="img/me.jpg"  class="img-responsive" alt="Somesh's pic">
+        </div>
+-->
+            <div class="col-lg-12">
+<h3 style="border-bottom: 1px solid black;padding-bottom:4px"> Miscellaneous </h3>
+
+<!--<h3>Accomplishments and Awards</h3> -->
+<h3>Accomplishments</h3>
+<!-- Pic saying page is under construction-->
+<!--
+     <p style="text-align:center; "><img style="max-width: 50%; margin-top: 1rem;" src="./img/construction.gif" alt="under_construction" border="2" /></p>
+-->
+<div style="font-size:18px;">
+<ul>
+
+<li>
+<dl>
+  <a href="docs/certificates/Certificate_HLF_SinghSomesh.pdf" target="_blank">
+  Selected</a>
+  for attending the
+  <a href= "https://www.heidelberg-laureate-forum.org/" target="_blank">
+      Heidelberg Laureate Forum</a>.
+       <span style="float:right; font-weight:normal; font-style: italic;"> September 2020 </span>
+</dl>
+</li>
+
+<li>
+<dl>
+  Awarded <em>ACM SIGPLAN PAC</em> grant for attending
+  <a href= "https://ppopp19.sigplan.org/" target="_blank">PPoPP 2019</a>.
+</dl>
+</li>
+
+
+<li>
+<dl>
+    <em>STAR TA Award</em> for contributions as a Teaching Assistant to "GPU Programming" course.
+       <span style="float:right; font-weight:normal; font-style: italic;"> November 2017 </span>
+</dl>
+</li>
+
+
+<li>
+<dl>
+        Secured <b>4th place</b> in HiPC 2016 Student Parallel Programming Challenge (Intel track).
+</dl>
+</li>
+
+<li>
+<dl>
+        Secured <b>4th place</b>  in HiPC 2015 Student Parallel Programming Challenge (Intel track).
+</dl>
+</li>
+
+</div>
+
+</hr>
+
+<h3>Professional Service</h3>
+<!-- Pic saying page is under construction-->
+<!--
+     <p style="text-align:center; "><img style="max-width: 50%; margin-top: 1rem;" src="./img/construction.gif" alt="under_construction" border="2" /></p>
+-->
+<div style="font-size:18px;">
+<ul>
+
+<li>
+<dl>
+    Reviewer:
+
+  <a href= "https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=71" target="_blank">
+	  IEEE Transactions on Parallel and Distributed Systems</a> (since 2021),
+
+  <a href= "https://dl.acm.org/journal/taco" target="_blank">
+	  ACM Transactions on Architecture and Code Optimization</a> (since 2022),
+
+  <a href= "https://www.journals.elsevier.com/parallel-computing" target="_blank">
+	  Parallel Computing</a> (since 2021)
+  [<a href="docs/certificates/Certificate_PARCO_Recognised.pdf" target="_blank">certificate</a>],
+
+  <a href= "https://onlinelibrary.wiley.com/journal/15320634" target="_blank">
+	  Concurrency and Computation: Practice and Experience</a> (since 2021)
+  [<a href="docs/certificates/CPE_Reviewer_Certificate_2021.pdf" target="_blank">certificate</a>],
+
+
+  <a href= "https://www.sciencedirect.com/journal/computer-physics-communications" target="_blank">
+	  Computer Physics Communications</a> (since 2023),
+
+  <a href= "https://www.springer.com/journal/41403" target="_blank">
+      Transactions of the Indian National Academy of Engineering</a> (since 2018),
+
+  <a href= "https://ieeexplore.ieee.org/xpl/aboutJournal.jsp?punumber=4563995" target="_blank">
+	 IEEE Embedded Systems Letters</a> (since 2017).
+
+</dl>
+</li>
+
+<li>
+<dl>
+    Program Committee:
+
+  <a href= "https://hpc.pnl.gov/grapl/previous/2023/" target="_blank">
+       GrAPL 2023</a> (IPDPSW).
+
+</dl>
+</li>
+
+<li>
+<dl>
+    Extended Review Committee:
+
+  <a href= "https://2023.ecoop.org/committee/ecoop-2023-research-papers-extended-review-committee" target="_blank">
+       ECOOP 2023</a>,
+
+  <a href= "https://2022.ecoop.org/committee/ecoop-2022-papers-extended-review-committee-" target="_blank">
+       ECOOP 2022</a>.
+
+
+</dl>
+</li>
+
+<li>
+<dl>
+    Subreviewer:
+
+  <a href= "https://sc24.supercomputing.org/" target="_blank">
+       SC 2024</a>,
+
+  <a href= "https://2022.hipc.org/" target="_blank">
+       HiPC 2022</a>.
+
+</dl>
+</li>
+
+<li>
+<dl>
+    Artifact Evaluation Committee:
+
+  <a href= "https://2025.splashcon.org/committee/splash-2025-oopsla-artifacts-artifact-evaluation-committee" target="_blank">
+        OOPSLA 2025</a>,
+
+  <a href= "https://pldi24.sigplan.org/committee/pldi-2024-pldi-research-artifacts-artifact-evaluation-committee" target="_blank">
+        PLDI 2024</a>,
+
+  <a href= "https://etaps.org/2023/conferences/artifact-evaluation-esop-fossacs/" target="_blank">
+        ESOP and FoSSaCS 2023</a>,
+
+  <a href= "https://2023.ecoop.org/committee/ecoop-2023-artifact-evaluation-artifact-evaluation-committee" target="_blank">
+        ECOOP 2023</a>,
+
+  <a href= "https://conf.researchr.org/committee/issta-2022/issta-2022-artifact-evaluation-artifact-evaluation-committee" target="_blank">
+        ISSTA 2022</a>,
+
+  <a href= "https://pldi22.sigplan.org/committee/pldi-2022-PLDI-Research-Artifacts-artifact-evaluation-committee" target="_blank">
+        PLDI 2022</a>,
+
+     <a href= "https://etaps.org/user-profile/archive/53-etaps-2022/491-esop-2022-artifact-evaluation.html" target="_blank">
+        ESOP 2022</a>,
+
+  <a href= "https://2022.ecoop.org/committee/ecoop-2022-artifacts-artifact-evaluation-committee" target="_blank">
+        ECOOP 2022</a>,
+
+  <a href= "https://2021.ecoop.org/committee/ecoop-2021-ecoop-artifacts-artifact-evaluation-committee" target="_blank">
+        ECOOP 2021</a>,
+
+  <a href= "https://ppopp21.sigplan.org/committee/PPoPP-2021-artifact-evaluation-committee" target="_blank">
+        PPoPP 2021</a>,
+
+  <a href= "https://2020.ecoop.org/committee/ecoop-2020-artifacts-artifact-evaluation-committee" target="_blank">
+        ECOOP 2020</a>,
+
+  <a href= "https://ppopp18.sigplan.org/committee/ppopp-2018-artifact-evaluation-committee" target="_blank">
+        PPoPP 2018</a>.
+</dl>
+</li>
+
+<li>
+<dl>
+     Student Volunteer (SV) for
+  <a href= "https://2020.splashcon.org/" target="_blank">
+       SPLASH</a>
+     /
+  <a href= "https://2020.ecoop.org/" target="_blank">
+       ECOOP 2020</a>.
+
+</dl>
+</li>
+
+<li>
+<dl>
+    Organizer for <em>CUDA Workshop</em> in <em>Exebit 2018</em> at IIT Madras.
+</dl>
+</li>
+
+</ul>
+
+
+</div>
+
+</hr>
+
+<h3> Selected Invited Talks </h3>
+
+<div style="font-size:18px;">
+<ul>
+
+<li>
+<dl>
+  <a href= "https://topal.gitlabpages.inria.fr/topal-working-group/" target="_blank">
+       Talks</a>
+ at
+<a href="https://topal.gitlabpages.inria.fr/" target="_blank">TOPAL Inria Team</a>, Bordeaux, France.
+
+  <span style="float:right;font-weight:normal; font-style:italic">
+    March 2024 &amp; December 2023 
+  </span>
+</dl>
+</li>
+
+<li>
+<dl>
+  <a href= "https://app.swapcard.com/event/isc-high-performance-2023/planning/UGxhbm5pbmdfMTIyMDgxNg==" target="_blank">
+       Talk</a>
+ at the
+ <i>Focus Session on High Performance Tensor Computations</i>
+ at
+<a href="https://www.isc-hpc.com/" target="_blank">
+ISC 2023</a>, Hamburg, Germany.
+
+  <span style="float:right;font-weight:normal; font-style:italic">
+    May 2023
+  </span>
+</dl>
+</li>
+
+<li>
+<dl>
+  <a href= "https://meetings.siam.org/sess/dsp_talk.cfm?p=125348" target="_blank">
+       Talk</a>
+  at the
+  <i>minisymposium on Recent Advances in Combinatorial Scientific Computing </i>
+ at
+<a href="https://www.siam.org/conferences/cm/conference/cse23" target="_blank">
+SIAM CSE'23</a>, Amsterdam, The Netherlands.
+
+  <span style="float:right;font-weight:normal; font-style:italic">
+    February 2023
+  </span>
+</dl>
+</li>
+
+<li>
+<dl>
+  <a href= "https://sparsedays.cerfacs.fr/en/slides-2022/" target="_blank">
+       Talk</a>
+ at
+<a href="https://sparsedays.cerfacs.fr/en/sparse-days-meeting-2022-in-saint-girons-iv/" target="_blank">
+Sparse Days 2022</a>, Saint-Girons, France.
+
+  <span style="float:right;font-weight:normal; font-style:italic">
+    June 2022
+  </span>
+</dl>
+</li>
+
+<li>
+<dl>
+  <a href= "https://scheduling2022.sciencesconf.org/program" target="_blank">
+       Talk</a>
+ at
+<a href="https://scheduling2022.sciencesconf.org/" target="_blank">
+15th Scheduling for Large Scale Systems Workshop</a>, Fr&#233;jus, France.
+
+  <span style="float:right;font-weight:normal; font-style:italic">
+    June 2022
+  </span>
+</dl>
+</li>
+
+<li>
+<dl>
+  <a href= "http://www.ens-lyon.fr/LIP/ROMA/workinggroup.php" target="_blank">
+       Talk</a>
+ at
+<a href="https://www.ens-lyon.fr/LIP/ROMA/" target="_blank">ROMA Inria Team</a>
+ at
+<a href="http://www.ens-lyon.fr/LIP/" target="_blank">LIP</a>, Lyon, France.
+
+  <span style="float:right;font-weight:normal; font-style:italic">
+    March 2022
+  </span>
+</dl>
+</li>
+
+<li>
+<dl>
+[Virtual]
+  <a href= "https://meetings.siam.org/sess/dsp_talk.cfm?p=119071" target="_blank">
+       Talk</a>
+  at the
+  <i>minisymposium on Parallel Processing in Data Science Applications</i>
+ at
+  <a href= "https://www.siam.org/conferences/cm/conference/pp22" target="_blank">
+       SIAM PP'22</a>.
+
+  <span style="float:right;font-weight:normal; font-style:italic">
+    February 2022
+  </span>
+</dl>
+</li>
+
+<li>
+<dl>
+[Virtual]
+  <a href= "https://www.ics.forth.gr/lecture/15243" target="_blank">
+       Talk</a>
+ at
+  <a href= "https://www.ics.forth.gr" target="_blank">
+       FORTH-ICS</a>.
+
+  <span style="float:right;font-weight:normal; font-style:italic">
+    July 2021
+  </span>
+</dl>
+</li>
+
+<li>
+<dl>
+[Virtual]
+  <a href= "https://blogs.qub.ac.uk/DIPSA/efficient-parallel-graph-processing-on-gpu-using-approximate-computing-by-somesh-singh/" target="_blank">
+       Talk</a>
+ at
+  <a href= "https://www.qub.ac.uk/schools/eeecs/" target="_blank">
+  Queen’s University Belfast</a>.
+
+  <span style="float:right;font-weight:normal; font-style:italic">
+    May 2021
+  </span>
+</dl>
+</li>
+
+<li>
+<dl>
+[Virtual]
+  <!--<a href= "https://stratcomm-elements.lbl.gov/berkeley-lab-events-calendar/" target="_blank">-->
+  <a href= "https://crd.lbl.gov/resources/computing-sciences-seminars/" target="_blank">
+       Talk</a>
+ at
+  <a href= "https://crd.lbl.gov/" target="_blank">
+Lawrence Berkeley National Laboratory</a>.
+  <span style="float:right;font-weight:normal; font-style:italic">
+    March 2021
+  </span>
+</dl>
+</li>
+
+
+</ul>
+
+</div>
+
+        </div>
+
+
+        </div>
+        <!-- /.row -->
+
+
+<hr />
+
+        <div class="row">
+<!--
+	<div class="col-sm-3 col-lg-4">
+	<img src="img/me.jpg"  class="img-responsive" alt="Somesh's pic"> 
+        </div>
+-->
+            <div class="col-lg-12">
+<h3 style="border-bottom: 1px solid black;padding-bottom:4px"> Mentoring </h3>
+<!-- Pic saying page is under construction-->
+
+<!--
+     <p style="text-align:center; "><img style="max-width: 50%; margin-top: 1rem;" src="./img/construction.gif" alt="under_construction" border="2" /></p> 
+-->
+
+ <h3>Events</h3>
+ <div style="font-size:16px;">
+ <ul>
+ <li>
+ <dl>
+   <dt> 
+      <a href = "https://www.gpuhackathons.org/event/c-dac-hpc-hackathon-2021" target="_blank">C-DAC HPC Hackathon 2021</a>
+        <span style="float:right;font-weight:normal; font-style: italic;"> July-August 2021  </span>    
+   </dt>
+<!--
+   <dd style="color:#C4820E;">
+       Approximate Betweenness Centrality
+   </dd>   
+-->
+ </dl> 
+ </li>
+ </ul>
+ </div>
+
+ <h3>M.Tech Project</h3>
+ <div style="font-size:16px;">
+ <ul>
+ <li>
+ <dl>
+   <dt> 
+      Tejas Shah<span style="font-weight:normal;">,
+   <a href = "https://www.iitm.ac.in/" target="_blank">IIT Madras</a>, Chennai </span> 
+        <span style="float:right;font-weight:normal; font-style: italic;"> 2017-18  </span>    
+   </dt>
+   <dd style="color:#C4820E;">
+       Approximate Betweenness Centrality
+   </dd>   
+ </dl> 
+ </li>
+ </ul>
+ </div>
+
+<h3> Interns </h3>
+<div style="font-size:16px;">
+<ul>
+<li>
+<dl>
+  <dt> 
+     Milind Srivastava<span style="font-weight:normal;">, 
+	<a href = "https://www.iitm.ac.in/" target="_blank">IIT Madras</a>, Chennai </span> 
+       <span style="float:right;font-weight:normal; font-style: italic;">December 2016 </span>
+  </dt>
+  <dd>  
+      <a href="docs/code/MilindSrivastava-ImageSegmentation.tar.gz" download style="color:#C4820E;"> 
+      Graph-based Image Segmentation </a> 
+  </dd>
+</dl>
+</li>
+<li>
+<dl>
+  <dt> Ronak Jayesh Shukla<span style="font-weight:normal;">, 
+	<a href = "https://vnit.ac.in/" target="_blank"> VNIT</a>, Nagpur </span>
+       <span style="float:right; font-weight:normal; font-style: italic;">June 2015 </span>
+ </dt>
+  <dd> 
+      <a href="docs/code/RonakShukla-ObjectTrackingSegmentation.tar.gz" download style="color:#C4820E;"> 
+      Image Segmentation and Object Tracking on GPU </a>
+ </dd>
+</dl>
+</li>
+</div>
+           </div>
+
+        </div>
+        <!-- /.row -->
+<hr />
+
 <div>
 
 <span style="float:right">
