--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ at
 ENS de Lyon, where I was hosted by
 <a href = "https://perso.ens-lyon.fr/bora.ucar/" target="_blank">Dr. Bora Uçar</a>.
 
-Before that, I obtained my Ph.D. from the
+Before that, I obtained my Ph.D. and Master's from the
 <a href="http://www.cse.iitm.ac.in/" target="_blank">
 Indian Institute of Technology Madras</a> under the supervision of
 <!--I was advised by -->
